# barnacleboy

./: Cargo.toml  README.md
cxx/: .gitignore  bbox.cpp  makefile  reader.hpp  record.hpp
data/moffit/: .gitignore  README.md  get.py  makefile  matrix.py  meta.py  pixel.md5  prior.py
docs/: boundaries.md  fileformat.md  mmap.md  polygons.md
python/: _linecol.py  _wip.py  barnacleboy.yml  cells.py  data.py  errors.py  fisher.py  fov.py  geneontology.py  graph.py  img.py  polygon.py  reader.py  reduce.py  test_np.py  test_utils.py  utils.py  voronoi.py  wip.py
scripts/: crop_n_gif.sh  mat2pickle.py
src/: hull.rs  main.rs
