[package]
name = "barnacleboy"
version = "0.1.0"
authors = ["Till Hartmann <till.hartmann@udo.edu>"]

[dependencies]
merfishtools = { git="https://github.com/merfishtools/merfishtools" }
itertools = "0.7"
image = "0.19"
palette = "0.4"
serde = "1.0"
serde-pickle = "*"
serde_derive = "1.0"
structopt = "0.2"
rayon = "1.0"